--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 
 body {        
     font-family: 'Titillium Web', sans-serif;
-    background-color: #FFFCFA;
+    background-color: #bce9df;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
@@ -11,7 +11,7 @@ main {
 }
 
 header {
-    background-color: #A2D7D2;
+    background-color: #1ca08a;
     height: 110px;
     padding: 0 30px;
     display: flex;
@@ -30,6 +30,35 @@ h1 {
 }
 
 footer {
-    background-color: #FAF0EA;
+    background-color:  #1ca08a;
     padding: 10px;
+}
+
+.hidden {
+    display: none;
+}
+button {
+    height: 100px;
+    width: 100px; 
+    border: white solid 2px;
+    border-radius: 100px;
+    background: red;
+    color: white;
+    box-shadow: 3px 3px darkgray;
+    font-size: larger;
+}
+
+button:hover{
+background: rgb(22, 35, 218);
+}
+
+input {
+    height: 50px;
+    width: 200px;
+    border: solid white 3px;
+    border-radius: 5px;
+    box-shadow: darkgray 3px 3px 3px;
+    color: teal;
+    font-size: 2rem;
+    font-weight: 900;
 }
